# business_case_tool

./: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml
bess_bc/: __init__.py  cli.py  engine.py  finance.py  inputs.py  soh.py
scripts/: validate_against_excel.py
tests/: test_extensions.py  test_validate_defaults.py
