[project]
name = "bess-bc"
version = "0.1.0"
description = "Standalone BESS business case calculator, replicating the BC tab of the Solar PV and BESS Excel model"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "openpyxl>=3.1",
    "pytest>=7.0",
]

[project.scripts]
bess-bc = "bess_bc.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["bess_bc"]
